[package]
name = "wulp"
version = "0.0.1"
description = "better lua"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
rustc-hash = "1.1"
memchr = "2.5"
bytecount = "0.6"
debug_tree = "0.4"
# 0.9.5 fails on luajit vendored
mlua = { version = "0.9.4", features = ["luajit", "vendored"] }
